tool-filter-button: Center the selected icon

Use the GtkOverlay only on the "image" part of the button.

https://bugzilla.gnome.org/show_bug.cgi?id=761626